--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <!-- ACTIVAR UBICACION -->
 
    <div >
-       <h2>IDENTIDAD DE TU BARRIO</h2>
+       <h2 class='texto-login'>IDENTIDAD DE TU BARRIO</h2>
     <div class="col-12">
         <div id="map" style="width: 100%; height: 500px; background: grey;" >
         </div>
