--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         </div>
 
     <!-- NAVEGACION BOTTOM -->
-    <ul class="nav col-12 bottom fixed-bottom justify-content-around pt-2" style="display: block-inline">
+    <ul class="nav col-12 bottom fixed-bottom justify-content-around pt-2" id='nav'>
         <li class="nav-item">
             <a href="#"><img src="./img/icono-home-gris.png" alt=""></a>
         </li>
