--- a/src/index.html
+++ b/src/index.html
@@ -294,7 +294,7 @@
         </div>
 
     <!-- NAVEGACION BOTTOM -->
-    <ul class="nav col-12 bottom fixed-bottom justify-content-around pt-2" style="display: none">
+    <ul class="nav col-12 bottom fixed-bottom justify-content-around pt-2" style="display: block">
         <li class="nav-item">
             <a href="#"><img src="./img/icono-home-gris.png" alt=""></a>
         </li>
